@@ -3,6 +3,7 @@
 	* If user reply "yes" to "no warranty" dialog, do not display that dialog any more.
 	* No error message from info pane
 	* Hide motherboard vendor if it is empty
+	* Clean Nautilus thumbnail image cache in setting pane
 
 2010-10-03 Homer Xing <homer.xing@gmail.com>
 
